<resources>
    <string name="app_name">CollageX</string>
    <string name="name">Name:</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered yet? \n Create your account for free!</string>
    <string name="my_adds">My adds</string>
    <string name="logout">Logout</string>
    <string name="title_activity_my_adds">MyAddsActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="register_ad">Register ad</string>
    <string-array name="category">
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Fashion</item>
        <item>Books</item>
        <item>Sports</item>
        <item>Free Zone (giveaway items)</item>
        <item>Other</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="phone_number">Phone number</string>
    <string name="value">Value</string>
    <string name="ad_title">Ad Title</string>
    <string name="dash">|</string>
    <string name="region">Region</string>
    <string name="category">Category</string>
    <string name="uf">UF</string>
    <string name="call">Call</string>
    <string name="search_hint">Search Items...</string>
    <string name="all_categories">All Categories</string>
        <string name="fresh_recommendations">Fresh recommendations</string>
    
    <!-- Product Details Strings -->
    <string name="button_chat">Chat</string>
    <string name="button_make_offer">Make Offer</string>
    <string name="button_call_coming_soon">Coming Soon</string>
    <string name="details_title">Details</string>
    <string name="description_title">Description</string>
    <string name="today">TODAY</string>
    
    <!-- Profile Screen Strings -->
    <string name="profile_title">Profile</string>
    <string name="edit_profile_info">Edit profile information</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="security">Security</string>
    <string name="theme">Theme</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="english">English</string>
    
        <string-array name="guwahati_districts">

            <item>Select your district</item>
            <item>Kamrup Metropolitan</item>
            <item>Kamrup Rural</item>
            <item>Other</item>
        </string-array>
    
    <string-array name="assam_colleges">
        <item>Select your college</item>
        <item>IIT Guwahati</item>
        <item>NIT Silchar</item>
        <item>Assam Engineering College</item>
        <item>Assam Medical College Dibrugarh</item>
        <item>Guwahati Medical College</item>
        <item>Gauhati University</item>
        <item>Dibrugarh University</item>
        <item>Tezpur University</item>
        <item>Cotton University</item>
        <item>Assam Agricultural University</item>
        <item>Assam University Silchar</item>
        <item>Cotton College Guwahati</item>
        <item>Handique Girls College</item>
        <item>B Borooah College</item>
        <item>Pandu College</item>
        <item>Pragjyotish College</item>
        <item>Arya Vidyapeeth College</item>
        <item>Gauhati Commerce College</item>
        <item>Nowgong College</item>
        <item>JB College Jorhat</item>
        <item>Sibsagar College</item>
        <item>LCB College</item>
        <item>JM College Silchar</item>
        <item>Gurucharan College</item>
        <item>Cachar College</item>
        <item>Mangaldai College</item>
        <item>North Lakhimpur College</item>
        <item>Bongaigaon College</item>
        <item>Kokrajhar College</item>
        <item>Jorhat Engineering College</item>
        <item>Girijananda Chowdhury Institute</item>
        <item>Royal Group of Institutions</item>
        <item>Assam Don Bosco University</item>
        <item>Assam Downtown University</item>
        <item>Silchar Medical College</item>
        <item>Jorhat Medical College</item>
        <item>Tezpur Medical College</item>
        <item>Guwahati Women College</item>
        <item>Other</item>
    </string-array>
    
    </resources>



